fix flex layout bug on generation contents

--- a/src/sass/pages/_timeline-page.scss
+++ b/src/sass/pages/_timeline-page.scss
@@ -39,6 +39,7 @@
 
     &__content {
         display: flex;
+        flex: 1;
         flex-direction: column;
         gap: 5rem;
         margin-left: 3rem;
